<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Safeguide1"
    tools:context=".start_up">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="-131dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear4"
            android:layout_width="346dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear3">

            <TextView
                android:id="@+id/textViewDescription3"
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/Paragraph_3" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear3"
            android:layout_width="346dp"
            android:layout_height="89dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/linear4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_2">

            <TextView
                android:id="@+id/textViewDescription2"
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/Paragraph_2"
                android:textSize="15sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_2"
            android:layout_width="346dp"
            android:layout_height="105dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linear3"
            app:layout_constraintTop_toBottomOf="@id/linear1">

            <TextView
                android:id="@+id/textViewDescription1"
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/Paragraph_1"
                android:textSize="15sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linear_2"
            app:layout_constraintTop_toTopOf="@id/constraint2">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="181dp"
                android:layout_height="155dp"
                android:src="@drawable/icon_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/str_button"
            android:layout_width="70dp"
            android:layout_height="35dp"

            android:background="@drawable/bg_btn_strt"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:src="@drawable/id_chevron" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
