<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:nestedScrollingEnabled="true"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/greenconstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GobagFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Header Image and Title -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/basta_taas">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="290dp"
                        android:layout_height="65dp"
                        android:fontFamily="@font/mmbold"
                        android:gravity="center"
                        android:text="About Us"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.495"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView3"
                        app:layout_constraintVertical_bias="0.044" />

                    <ImageView
                        android:id="@+id/handicon"
                        android:src="@drawable/holdinghands"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                         />


                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint2"
                android:layout_width="match_parent"
                android:layout_height="600dp">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear_2"
                    android:layout_width="356dp"
                    android:layout_height="143dp"
                    app:layout_constraintEnd_toEndOf="@id/constraint2"
                    app:layout_constraintStart_toStartOf="@id/constraint2"
                    app:layout_constraintTop_toTopOf="@id/constraint2"
                    app:layout_constraintBottom_toTopOf="@id/linear4"
                    >

                    <TextView
                        android:id="@+id/textViewDescription1"
                        android:layout_width="346dp"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/about_us_paragraph1"
                        android:textSize="15sp" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear_3"
                    android:layout_width="356dp"
                    android:layout_height="143dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="@id/constraint2"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintBottom_toTopOf="@id/linear5"
                    app:layout_constraintStart_toStartOf="@id/constraint2"
                    app:layout_constraintTop_toBottomOf="@id/linear4">

                    <TextView
                        android:id="@+id/textViewDescription2"
                        android:layout_width="346dp"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/about_us_paragraph2"
                        android:textSize="15sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear4"
                    android:layout_width="126dp"
                    android:layout_height="25dp"
                    app:layout_constraintBottom_toTopOf="@id/linear_3"
                    app:layout_constraintEnd_toEndOf="@id/linear_2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/linear_2"
                    app:layout_constraintTop_toBottomOf="@id/linear_2">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmbold"
                        android:text="Why Safeguide?" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear5"
                    android:layout_width="91dp"
                    android:layout_height="23dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@id/linear_3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/linear_3"
                    app:layout_constraintTop_toBottomOf="@id/linear_3">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmbold"
                        android:text="Contact Us"
                        app:layout_constraintHorizontal_bias="0.089" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear_4"
                    android:layout_width="350dp"
                    android:layout_height="78dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@id/constraint2"
                    app:layout_constraintHorizontal_bias="0.459"
                    app:layout_constraintStart_toStartOf="@id/constraint2"
                    app:layout_constraintTop_toBottomOf="@id/linear5">

                    <TextView
                        android:id="@+id/textViewDescription3"
                        android:layout_width="346dp"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/about_us_paragraph3"
                        android:textSize="15sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear6"
                    android:layout_width="95dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="64dp"
                    app:layout_constraintEnd_toEndOf="@id/linear_4"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/linear_4"
                    app:layout_constraintTop_toBottomOf="@id/linear_4">

                    <TextView
                        android:id="@+id/versionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmbold"
                        android:text="Version will be showed here"
                        app:layout_constraintHorizontal_bias="0.089" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>